# qbar

./: .travis.yml  Cargo.toml  LICENSE  README.md  default-config.qb
.github/: FUNDING.yml
.github/workflows/: main.yml  rust.yml
docs/: 404.html  CNAME  IBM-Plex-LICENSE.txt  README.md  app.html  blog.html  docs.html  get-started.html  index.html  index.next.html  info.html  install.html
docs/app/: Cargo.toml  LICENSE  Makefile.toml  index.html
docs/app/css/: index.css
docs/app/js/: wasm.js  wasm_bg.wasm
docs/app/src/: lib.rs
docs/css/: app.css  card.css  common.css  error.css  full-footer.css  index.css  page.css  style.css
docs/font/Fira/: family.css
docs/font/IBM-Plex/: family.css
docs/js/: wasm.js  wasm_bg.wasm
examples/: README.md  busy_beaver_4_2.qb  computational_type_theory.qb  etcs.qb  pierce_law.qb  relevance_logics.qb  straightedge_and_compass.qb  straightedge_and_compass_stateful.qb  tarski_geometry.qb
examples/geometry/: origami.qb
examples/logic/: leibniz_equality.qb  pierce_law.qb  polynomial_calculus.qb  resolution_proof_system.qb  sup_calculus.qb
qbar-web/: Cargo.toml  Makefile.toml  README.md
qbar-web/src/: lib.rs  model.rs  term.rs
src/: app.rs  command.rs  database.rs  hash.rs  lib.rs  main.rs  parser.rs  term.rs  util.rs
src/app/: command.rs  mod.rs  term.rs
src/backend/: mod.rs  vec.rs
tools/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
tools/vscode/src/: extension.ts
tools/vscode/syntaxes/: qbar.tmLanguage.json
