[package]
name = "qbar"
version = "0.0.0"
edition = "2018"
authors = ["Brandon H. Gomes <bhgomes.github@gmail.com>"]
homepage = "https://qbar.io"
documentation = "https://docs.rs/qbar"
repository = "https://github.com/qdeduction/qbar"
readme = "README.md"
license = "ISC"
keywords = ["cli", "proof assistant"]
categories = ["command-line-utilities"]
description = "the rational proof assistant"
exclude = ["docs/**/*"]

[badges]
is-it-maintained-issue-resolution = { repository = "qdeduction/qbar" }
is-it-maintained-open-issues = { repository = "qdeduction/qbar" }
maintenance = { status = "actively-developed" }

[dependencies]
terminal = { version = "0.2.1", features = ["crossterm-backend"] }

